@@ -1,8 +1,9 @@
-// Copyright 2000-2021 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2022 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.ide.plugins;
 
 import com.intellij.CommonBundle;
 import com.intellij.core.CoreBundle;
+import com.intellij.diagnostic.LoadingState;
 import com.intellij.ide.IdeBundle;
 import com.intellij.ide.plugins.marketplace.MarketplacePluginDownloadService;
 import com.intellij.ide.plugins.marketplace.PluginSignatureChecker;
@@ -27,7 +28,8 @@ import com.intellij.openapi.util.Comparing;
 import com.intellij.openapi.util.Pair;
 import com.intellij.openapi.util.io.FileUtil;
 import com.intellij.openapi.util.io.FileUtilRt;
-import com.intellij.openapi.util.registry.Registry;
+import com.intellij.openapi.util.io.NioFiles;
+import com.intellij.openapi.util.registry.RegistryManager;
 import com.intellij.openapi.util.text.StringUtil;
 import com.intellij.openapi.vfs.VfsUtil;
 import com.intellij.openapi.vfs.VfsUtilCore;
@@ -42,7 +44,6 @@ import javax.swing.*;
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.*;
 import java.util.function.BiConsumer;
 import java.util.function.Consumer;
@@ -51,9 +52,6 @@ import java.util.zip.ZipFile;
 
 import static com.intellij.ide.startup.StartupActionScriptManager.*;
 
-/**
- * @author stathik
- */
 public final class PluginInstaller {
   private static final Logger LOG = Logger.getInstance(PluginInstaller.class);
 
@@ -88,7 +86,8 @@ public final class PluginInstaller {
     return false;
   }
 
-  private static void uninstallAfterRestart(@NotNull Path pluginPath) throws IOException {
+  @ApiStatus.Internal
+  public static void uninstallAfterRestart(@NotNull Path pluginPath) throws IOException {
     addActionCommand(new DeleteCommand(pluginPath));
   }
 
@@ -97,12 +96,13 @@ public final class PluginInstaller {
                                                boolean isUpdate) {
     boolean uninstalledWithoutRestart = true;
     if (pluginDescriptor.isEnabled()) {
-      DynamicPlugins.UnloadPluginOptions options = new DynamicPlugins.UnloadPluginOptions().withDisable(false)
+      DynamicPlugins.UnloadPluginOptions options = new DynamicPlugins.UnloadPluginOptions()
+        .withDisable(false)
         .withUpdate(isUpdate)
         .withWaitForClassloaderUnload(true);
 
       uninstalledWithoutRestart = parentComponent != null ?
-                                  DynamicPlugins.unloadPluginWithProgress(null, parentComponent, pluginDescriptor, options) :
+                                  DynamicPlugins.INSTANCE.unloadPluginWithProgress(null, parentComponent, pluginDescriptor, options) :
                                   DynamicPlugins.INSTANCE.unloadPlugin(pluginDescriptor, options);
     }
 
@@ -128,10 +128,21 @@ public final class PluginInstaller {
     return uninstalledWithoutRestart;
   }
 
-  public static void installAfterRestart(@NotNull Path sourceFile,
-                                         boolean deleteSourceFile,
+  @ApiStatus.Internal
+  public static void installAfterRestartAndKeepIfNecessary(@NotNull IdeaPluginDescriptor newDescriptor,
+                                                           @NotNull Path newPluginPath,
+                                                           @Nullable Path oldPluginPath) throws IOException {
+    installAfterRestart(newDescriptor,
+                        newPluginPath,
+                        oldPluginPath,
+                        !keepArchive());
+  }
+
+  @ApiStatus.Internal
+  public static void installAfterRestart(@NotNull IdeaPluginDescriptor descriptor,
+                                         @NotNull Path sourceFile,
                                          @Nullable Path existingPlugin,
-                                         @NotNull IdeaPluginDescriptor descriptor) throws IOException {
+                                         boolean deleteSourceFile) throws IOException {
     List<ActionCommand> commands = new ArrayList<>();
 
     if (existingPlugin != null) {
@@ -190,7 +201,7 @@ public final class PluginInstaller {
     }
     else {
       target = targetPath.resolve(rootEntryName(sourceFile));
-      FileUtilRt.delete(target.toFile());
+      NioFiles.deleteRecursively(target);
       new Decompressor.Zip(sourceFile).extract(targetPath);
     }
     return target;
@@ -198,15 +209,16 @@ public final class PluginInstaller {
 
   public static String rootEntryName(@NotNull Path zip) throws IOException {
     try (ZipFile zipFile = new ZipFile(zip.toFile())) {
-      Enumeration<? extends ZipEntry> entries = zipFile.entries();
+      var entries = zipFile.entries();
       while (entries.hasMoreElements()) {
         ZipEntry zipEntry = entries.nextElement();
         // we do not necessarily get a separate entry for the subdirectory when the file
-        // in the ZIP archive is placed in a subdirectory, so we need to check if the slash
-        // is found anywhere in the path
+        // in the ZIP archive is placed in a subdirectory, so we need to check if the slash  is found anywhere in the path
         String name = zipEntry.getName();
         int i = name.indexOf('/');
-        if (i > 0) return name.substring(0, i);
+        if (i > 0) {
+          return name.substring(0, i);
+        }
       }
     }
 
@@ -283,10 +295,8 @@ public final class PluginInstaller {
                                                             InstallationSourceEnum.FROM_DISK,
                                                             installedPlugin != null ? installedPlugin.getVersion() : null);
 
-      if (Registry.is("custom-repository.certificate.signature.check")) {
-        if (!PluginSignatureChecker.verify(pluginDescriptor, file, true)) {
-          return false;
-        }
+      if (!PluginSignatureChecker.verifyIfRequired(pluginDescriptor, file, false, true)) {
+        return false;
       }
 
       Task.WithResult<Pair<PluginInstallOperation, ? extends IdeaPluginDescriptor>, RuntimeException> task =
@@ -323,14 +333,14 @@ public final class PluginInstaller {
                                   !DynamicPlugins.allowLoadUnloadWithoutRestart(pluginDescriptor) ||
                                   operation.isRestartRequired();
       if (isRestartRequired) {
-        installAfterRestart(path, false, oldFile, pluginDescriptor);
+        installAfterRestart(pluginDescriptor, path, oldFile, false);
       }
       ourState.onPluginInstall(pluginDescriptor, installedPlugin != null, isRestartRequired);
 
       IdeaPluginDescriptor toDisable = pair.getSecond();
       if (toDisable != null) {
         // TODO[yole] unload and check for restart
-        pluginEnabler.disablePlugins(Set.of(toDisable));
+        pluginEnabler.disable(Set.of(toDisable));
       }
 
       Set<PluginInstallCallbackData> installedDependencies = operation.getInstalledDependentPlugins();
@@ -360,7 +370,7 @@ public final class PluginInstaller {
         }
       }
 
-      if (path.toString().endsWith(".zip") && Registry.is("ide.plugins.keep.archive")) {
+      if (path.toString().endsWith(".zip") && keepArchive()) {
         File tempFile = MarketplacePluginDownloadService.getPluginTempFile();
         FileUtil.copy(file, tempFile);
         MarketplacePluginDownloadService.renameFileToZipRoot(tempFile);
@@ -390,14 +400,19 @@ public final class PluginInstaller {
     }
 
     IdeaPluginDescriptorImpl targetDescriptor = PluginDescriptorLoader.loadDescriptor(targetFile,
-                                                                                      DisabledPluginsState.disabledPlugins(),
                                                                                       false,
                                                                                       PluginXmlPathResolver.DEFAULT_PATH_RESOLVER);
     if (targetDescriptor == null) {
       return false;
     }
 
-    return DynamicPlugins.INSTANCE.loadPlugin(targetDescriptor);
+    return PluginEnabler.HEADLESS.isDisabled(targetDescriptor.getPluginId()) ||
+           DynamicPlugins.INSTANCE.loadPlugin(targetDescriptor);
+  }
+
+  private static boolean keepArchive() {
+    return !LoadingState.COMPONENTS_LOADED.isOccurred() ||
+           RegistryManager.getInstance().is("ide.plugins.keep.archive");
   }
 
   private static @NotNull Set<String> findNotInstalledPluginDependencies(@NotNull List<? extends IdeaPluginDependency> dependencies,
@@ -409,8 +424,7 @@ public final class PluginInstaller {
 
       PluginId pluginId = dependency.getPluginId();
       if (installedDependencies.contains(pluginId) ||
-          model.isEnabled(pluginId) ||
-          model.isDisabled(pluginId) ||
+          model.isLoaded(pluginId) ||
           PluginManagerCore.isModuleDependency(pluginId)) {
         continue;
       }
@@ -456,7 +470,7 @@ public final class PluginInstaller {
   }
 
   private static @NotNull Path getPluginsPath() {
-    return Paths.get(PathManager.getPluginsPath());
+    return Path.of(PathManager.getPluginsPath());
   }
 
   private static void installPluginFromCallbackData(@NotNull PluginInstallCallbackData callbackData) {
