@@ -1,10 +1,11 @@
-// Copyright 2000-2021 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2022 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.testFramework.fixtures.impl;
 
 import com.intellij.analysis.AnalysisScope;
 import com.intellij.application.options.CodeStyle;
 import com.intellij.codeHighlighting.RainbowHighlighter;
 import com.intellij.codeInsight.AutoPopupController;
+import com.intellij.codeInsight.CodeInsightBundle;
 import com.intellij.codeInsight.TargetElementUtil;
 import com.intellij.codeInsight.completion.CompletionType;
 import com.intellij.codeInsight.daemon.DaemonCodeAnalyzer;
@@ -14,15 +15,19 @@ import com.intellij.codeInsight.daemon.impl.*;
 import com.intellij.codeInsight.folding.CodeFoldingManager;
 import com.intellij.codeInsight.highlighting.actions.HighlightUsagesAction;
 import com.intellij.codeInsight.intention.IntentionAction;
+import com.intellij.codeInsight.intention.IntentionActionDelegate;
 import com.intellij.codeInsight.intention.impl.CachedIntentions;
 import com.intellij.codeInsight.intention.impl.IntentionListStep;
 import com.intellij.codeInsight.intention.impl.ShowIntentionActionsHandler;
+import com.intellij.codeInsight.intention.impl.preview.IntentionPreviewPopupUpdateProcessor;
+import com.intellij.codeInsight.intention.preview.IntentionPreviewInfo;
 import com.intellij.codeInsight.lookup.LookupElement;
 import com.intellij.codeInsight.lookup.LookupManager;
 import com.intellij.codeInsight.lookup.impl.LookupImpl;
 import com.intellij.codeInspection.InspectionProfileEntry;
 import com.intellij.codeInspection.InspectionToolProvider;
 import com.intellij.codeInspection.LocalInspectionTool;
+import com.intellij.codeInspection.actions.CleanupInspectionIntention;
 import com.intellij.codeInspection.ex.InspectionToolWrapper;
 import com.intellij.facet.Facet;
 import com.intellij.facet.FacetManager;
@@ -33,12 +38,12 @@ import com.intellij.find.findUsages.FindUsagesManager;
 import com.intellij.find.findUsages.FindUsagesOptions;
 import com.intellij.find.impl.FindManagerImpl;
 import com.intellij.find.usages.api.SearchTarget;
-import com.intellij.find.usages.api.UsageHandler;
 import com.intellij.find.usages.api.UsageOptions;
 import com.intellij.find.usages.impl.AllSearchOptions;
 import com.intellij.ide.IdeEventQueue;
 import com.intellij.ide.actions.searcheverywhere.ClassSearchEverywhereContributor;
 import com.intellij.ide.actions.searcheverywhere.SearchEverywhereContributor;
+import com.intellij.ide.actions.searcheverywhere.SymbolSearchEverywhereContributor;
 import com.intellij.ide.structureView.StructureViewBuilder;
 import com.intellij.ide.structureView.newStructureView.StructureViewComponent;
 import com.intellij.ide.util.scopeChooser.ScopeDescriptor;
@@ -87,15 +92,19 @@ import com.intellij.openapi.project.DumbService;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.roots.ModuleRootManager;
 import com.intellij.openapi.roots.ProjectRootManager;
+import com.intellij.openapi.roots.impl.ProjectRootManagerComponent;
 import com.intellij.openapi.roots.impl.ProjectRootManagerImpl;
 import com.intellij.openapi.roots.impl.libraries.LibraryTableTracker;
-import com.intellij.openapi.util.*;
+import com.intellij.openapi.util.Disposer;
+import com.intellij.openapi.util.Segment;
+import com.intellij.openapi.util.ThrowableComputable;
 import com.intellij.openapi.util.io.FileUtil;
 import com.intellij.openapi.util.registry.Registry;
 import com.intellij.openapi.util.text.StringUtil;
 import com.intellij.openapi.vcs.readOnlyHandler.ReadonlyStatusHandlerImpl;
 import com.intellij.openapi.vfs.*;
 import com.intellij.openapi.vfs.impl.VirtualFilePointerTracker;
+import com.intellij.profile.codeInspection.ProjectInspectionProfileManager;
 import com.intellij.psi.*;
 import com.intellij.psi.impl.PsiManagerEx;
 import com.intellij.psi.impl.PsiManagerImpl;
@@ -123,6 +132,7 @@ import com.intellij.usageView.UsageViewContentManager;
 import com.intellij.usages.*;
 import com.intellij.usages.impl.UsageViewImpl;
 import com.intellij.util.*;
+import com.intellij.util.concurrency.AppExecutorUtil;
 import com.intellij.util.containers.ContainerUtil;
 import com.intellij.util.indexing.FileBasedIndex;
 import com.intellij.util.indexing.FileBasedIndexExtension;
@@ -130,6 +140,8 @@ import com.intellij.util.indexing.FindSymbolParameters;
 import com.intellij.util.io.ReadOnlyAttributeUtil;
 import com.intellij.util.ui.UIUtil;
 import junit.framework.ComparisonFailure;
+import kotlin.UninitializedPropertyAccessException;
+import org.intellij.lang.annotations.Language;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 import org.jetbrains.annotations.TestOnly;
@@ -141,13 +153,14 @@ import java.lang.ref.Reference;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.*;
+import java.util.concurrent.ExecutionException;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicBoolean;
+import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-import static com.intellij.find.usages.api.UsageHandler.UsageAction.FIND_USAGES;
 import static com.intellij.find.usages.impl.ImplKt.buildUsageViewQuery;
 import static com.intellij.openapi.util.io.FileUtil.toSystemDependentName;
 import static com.intellij.testFramework.RunAll.runAll;
@@ -214,12 +227,12 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
 
   private static void removeDuplicatedRangesForInjected(@NotNull List<? extends HighlightInfo> infos) {
     infos.sort((o1, o2) -> {
-      final int i = o1.startOffset - o2.startOffset;
+      int i = o1.startOffset - o2.startOffset;
       return i != 0 ? i : o1.getSeverity().myVal - o2.getSeverity().myVal;
     });
     HighlightInfo prevInfo = null;
     for (Iterator<? extends HighlightInfo> it = infos.iterator(); it.hasNext();) {
-      final HighlightInfo info = it.next();
+      HighlightInfo info = it.next();
       if (prevInfo != null &&
           info.getSeverity() == HighlightInfoType.SYMBOL_TYPE_SEVERITY &&
           info.getDescription() == null &&
@@ -252,6 +265,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
     DaemonCodeAnalyzerImpl codeAnalyzer = (DaemonCodeAnalyzerImpl)DaemonCodeAnalyzer.getInstance(project);
     TextEditor textEditor = TextEditorProvider.getInstance().getTextEditor(editor);
     DaemonCodeAnalyzerSettings settings = DaemonCodeAnalyzerSettings.getInstance();
+    ProjectInspectionProfileManager.getInstance(project); // avoid "severities changed, restart" event
 
     ProcessCanceledException exception = null;
     int retries = 1000;
@@ -280,7 +294,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
       catch (ProcessCanceledException e) {
         Throwable cause = e.getCause();
         if (cause != null && cause.getClass() != Throwable.class) {
-          // canceled because of an exception, no need to repeat the same a lot times
+          // canceled because of an exception, no need to repeat the same
           throw e;
         }
 
@@ -308,6 +322,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
   }
 
   @NotNull
+  @TestOnly
   public static List<IntentionAction> getAvailableIntentions(@NotNull Editor editor, @NotNull PsiFile file) {
     return ReadAction.compute(() -> doGetAvailableIntentions(editor, file));
   }
@@ -318,6 +333,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
     if (current != null) {
       current.waitForHighlighting(file.getProject(), editor);
     }
+    waitForUnresolvedReferencesQuickFixesUnderCaret(file, editor);
     ShowIntentionsPass.IntentionsInfo intentions = ShowIntentionsPass.getActionsToShow(editor, file, false);
 
     List<IntentionAction> result = new ArrayList<>();
@@ -330,25 +346,31 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
 
     List<HighlightInfo> infos = DaemonCodeAnalyzerEx.getInstanceEx(file.getProject()).getFileLevelHighlights(file.getProject(), file);
     for (HighlightInfo info : infos) {
-      List<Pair<HighlightInfo.IntentionActionDescriptor, TextRange>> fixRanges = info.quickFixActionRanges;
-      if (fixRanges != null) {
-        for (Pair<HighlightInfo.IntentionActionDescriptor, TextRange> pair : fixRanges) {
-          HighlightInfo.IntentionActionDescriptor actionInGroup = pair.first;
-          if (actionInGroup.getAction().isAvailable(file.getProject(), editor, file)) {
-            result.add(actionInGroup.getAction());
-            List<IntentionAction> options = actionInGroup.getOptions(file, editor);
-            if (options != null) {
-              for (IntentionAction subAction : options) {
-                if (subAction.isAvailable(file.getProject(), editor, file)) {
-                  result.add(subAction);
-                }
-              }
+      info.findRegisteredQuickFix((descriptor, range) -> {
+        if (descriptor.getAction().isAvailable(file.getProject(), editor, file)) {
+          result.add(descriptor.getAction());
+          for (IntentionAction subAction : descriptor.getOptions(file, editor)) {
+            if (subAction.isAvailable(file.getProject(), editor, file)) {
+              result.add(subAction);
             }
           }
         }
-      }
+        return null;
+      });
     }
     return result;
+  }
+
+  public static void waitForUnresolvedReferencesQuickFixesUnderCaret(@NotNull PsiFile file, @NotNull Editor editor) {
+    if (ApplicationManager.getApplication().isDispatchThread()) {
+      ActionUtil.underModalProgress(file.getProject(), CodeInsightBundle.message("progress.title.searching.for.context.actions"), () -> {
+        DaemonCodeAnalyzerImpl.waitForUnresolvedReferencesQuickFixesUnderCaret(file, editor);
+        return null;
+      });
+    }
+    else {
+      DaemonCodeAnalyzerImpl.waitForUnresolvedReferencesQuickFixesUnderCaret(file, editor);
+    }
   }
 
   @NotNull
@@ -401,7 +423,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
 
     assertFileEndsWithCaseSensitivePath(sourceFile);
 
-    assertTrue("Cannot find source file: " + sourcePath + "; test data path: " + testDataPath, sourceFile.exists());
+    assertTrue("Cannot find source file: " + sourceFile + "; test data path: " + testDataPath+"; sourcePath: "+sourcePath, sourceFile.exists());
     assertTrue("Not a file: " + sourceFile, sourceFile.isFile());
 
     if (targetFile == null) {
@@ -415,8 +437,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
     return targetFile;
   }
 
-  private static void assertFileEndsWithCaseSensitivePath(@Nullable File sourceFile) {
-    if (sourceFile == null) return;
+  private static void assertFileEndsWithCaseSensitivePath(@NotNull File sourceFile) {
     try {
       String sourceName = sourceFile.getPath();
       File realFile = sourceFile.getCanonicalFile();
@@ -432,7 +453,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
     }
   }
 
-  private static void copyContent(File sourceFile, VirtualFile targetFile) {
+  private static void copyContent(@NotNull File sourceFile, @NotNull VirtualFile targetFile) {
     try {
       WriteAction.runAndWait(() -> {
         targetFile.setBinaryContent(FileUtil.loadFileBytes(sourceFile));
@@ -448,14 +469,14 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
   @NotNull
   @Override
   public VirtualFile copyDirectoryToProject(@NotNull String sourcePath, @NotNull String targetPath) {
-    final String testDataPath = getTestDataPath();
+    String testDataPath = getTestDataPath();
 
-    final File fromFile = new File(testDataPath + "/" + sourcePath);
+    File fromFile = new File(testDataPath + "/" + sourcePath);
     if (myTempDirFixture instanceof LightTempDirTestFixtureImpl) {
       return myTempDirFixture.copyAll(fromFile.getPath(), targetPath);
     }
 
-    final File targetFile = new File(getTempDirPath() + "/" + targetPath);
+    File targetFile = new File(getTempDirPath() + "/" + targetPath);
     try {
       FileUtil.copyDir(fromFile, targetFile);
     }
@@ -463,7 +484,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
       throw new RuntimeException(e);
     }
 
-    final VirtualFile file = LocalFileSystem.getInstance().refreshAndFindFileByIoFile(targetFile);
+    VirtualFile file = LocalFileSystem.getInstance().refreshAndFindFileByIoFile(targetFile);
     assertNotNull(file);
     file.refresh(false, true);
 
@@ -533,8 +554,9 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
   private long collectAndCheckHighlighting(boolean checkWarnings,
                                            boolean checkInfos,
                                            boolean checkWeakWarnings,
-                                           Stream<? extends VirtualFile> files) {
-    List<Trinity<PsiFile, Editor, ExpectedHighlightingData>> data = files.map(file -> {
+                                           @NotNull Stream<? extends VirtualFile> files) {
+    record FileHighlighting(PsiFile file, Editor editor, ExpectedHighlightingData data) {}
+    List<FileHighlighting> data = files.map(file -> {
       PsiFile psiFile = myPsiManager.findFile(file);
       assertNotNull(psiFile);
       Document document = PsiDocumentManager.getInstance(getProject()).getDocument(psiFile);
@@ -542,13 +564,12 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
       ExpectedHighlightingData datum =
         new ExpectedHighlightingData(document, checkWarnings, checkWeakWarnings, checkInfos, false, myMessageBundles);
       datum.init();
-      return Trinity.create(psiFile, createEditor(file), datum);
-    })
-      .collect(Collectors.toList());
+      return new FileHighlighting(psiFile, createEditor(file), datum);
+    }).toList();
     long elapsed = 0;
-    for (Trinity<PsiFile, Editor, ExpectedHighlightingData> trinity : data) {
-      setFileAndEditor(trinity.first.getVirtualFile(), trinity.second);
-      elapsed += collectAndCheckHighlighting(trinity.third);
+    for (FileHighlighting highlighting : data) {
+      setFileAndEditor(highlighting.file().getVirtualFile(), highlighting.editor());
+      elapsed += collectAndCheckHighlighting(highlighting.data());
     }
     return elapsed;
   }
@@ -597,7 +618,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
   }
 
   @Override
-  public void openFileInEditor(@NotNull final VirtualFile file) {
+  public void openFileInEditor(@NotNull VirtualFile file) {
     setFileAndEditor(file, createEditor(file));
   }
 
@@ -626,7 +647,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
 
   @Override
   @Nullable
-  public PsiReference getReferenceAtCaretPosition(final String @NotNull ... filePaths) {
+  public PsiReference getReferenceAtCaretPosition(String @NotNull ... filePaths) {
     if (filePaths.length > 0) {
       configureByFilesInner(filePaths);
     }
@@ -635,15 +656,15 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
 
   @Override
   @NotNull
-  public PsiReference getReferenceAtCaretPositionWithAssertion(final String @NotNull ... filePaths) {
-    final PsiReference reference = getReferenceAtCaretPosition(filePaths);
+  public PsiReference getReferenceAtCaretPositionWithAssertion(String @NotNull ... filePaths) {
+    PsiReference reference = getReferenceAtCaretPosition(filePaths);
     assertNotNull("no reference found at " + myEditor.getCaretModel().getLogicalPosition(), reference);
     return reference;
   }
 
   @Override
   @NotNull
-  public List<IntentionAction> getAvailableIntentions(final String @NotNull ... filePaths) {
+  public List<IntentionAction> getAvailableIntentions(String @NotNull ... filePaths) {
     if (filePaths.length > 0) {
       configureByFilesInner(filePaths);
     }
@@ -652,7 +673,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
 
   @Override
   @NotNull
-  public List<IntentionAction> getAllQuickFixes(final String @NotNull ... filePaths) {
+  public List<IntentionAction> getAllQuickFixes(String @NotNull ... filePaths) {
     if (filePaths.length != 0) {
       configureByFilesInner(filePaths);
     }
@@ -671,6 +692,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
     return InjectedLanguageEditorUtil.getTopLevelEditor(getEditor());
   }
 
+  @NotNull
   private PsiFile getHostFileAtCaret() {
     return Objects.requireNonNull(PsiUtilBase.getPsiFileInEditor(getHostEditor(), getProject()));
   }
@@ -684,7 +706,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
   @NotNull
   @Override
   public IntentionAction findSingleIntention(@NotNull String hint) {
-    final List<IntentionAction> list = filterAvailableIntentions(hint);
+    List<IntentionAction> list = filterAvailableIntentions(hint);
     if (list.isEmpty()) {
       fail("\"" + hint + "\" not in [" + StringUtil.join(getAvailableIntentions(), INTENTION_NAME_FUN, ", ") + "]");
     }
@@ -695,7 +717,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
   }
 
   @Override
-  public IntentionAction getAvailableIntention(@NotNull final String intentionName, final String @NotNull ... filePaths) {
+  public IntentionAction getAvailableIntention(@NotNull String intentionName, String @NotNull ... filePaths) {
     List<IntentionAction> intentions = getAvailableIntentions(filePaths);
     IntentionAction action = CodeInsightTestUtil.findIntentionByText(intentions, intentionName);
     if (action == null) {
@@ -706,7 +728,50 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
   }
 
   @Override
-  public void launchAction(@NotNull final IntentionAction action) {
+  public void checkPreviewAndLaunchAction(@NotNull IntentionAction action) {
+    if (skipPreview(action)) {
+      launchAction(action);
+    } else {
+      String text = getIntentionPreviewText(action);
+      assertNotNull(action.getText(), text);
+      launchAction(action);
+      assertEquals(action.getText(), getFile().getText(), text);
+    }
+  }
+
+  private static boolean skipPreview(@NotNull IntentionAction action) {
+    return IntentionActionDelegate.unwrap(action) instanceof CleanupInspectionIntention;
+  }
+
+  @Override
+  public @Nullable String getIntentionPreviewText(@NotNull IntentionAction action) {
+    // Run in background thread to catch accidental write-actions during preview generation
+    try {
+      return ReadAction.nonBlocking(() -> IntentionPreviewPopupUpdateProcessor.getPreviewText(getProject(), action, getFile(), getEditor()))
+        .submit(AppExecutorUtil.getAppExecutorService()).get();
+    }
+    catch (InterruptedException | ExecutionException e) {
+      throw new RuntimeException(e);
+    }
+  }
+
+  @Override
+  public void checkIntentionPreviewHtml(@NotNull IntentionAction action, @NotNull @Language("HTML") String expected) {
+    // Run in background thread to catch accidental write-actions during preview generation
+    IntentionPreviewInfo info;
+    try {
+      info = ReadAction.nonBlocking(() -> IntentionPreviewPopupUpdateProcessor.getPreviewInfo(getProject(), action, getFile(), getEditor()))
+        .submit(AppExecutorUtil.getAppExecutorService()).get();
+    }
+    catch (InterruptedException | ExecutionException e) {
+      throw new RuntimeException(e);
+    }
+    assertTrue(action.getText(), info instanceof IntentionPreviewInfo.Html);
+    assertEquals(action.getText(), expected, ((IntentionPreviewInfo.Html)info).content().toString());
+  }
+
+  @Override
+  public void launchAction(@NotNull IntentionAction action) {
     EdtTestUtil.runInEdtAndWait(() -> invokeIntention(action, getHostFileAtCaret(), getHostEditor()));
   }
 
@@ -716,7 +781,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
   }
 
   @Override
-  public void testCompletionTyping(final String @NotNull [] filesBefore, @NotNull String toType, @NotNull final String fileAfter) {
+  public void testCompletionTyping(String @NotNull [] filesBefore, @NotNull String toType, @NotNull String fileAfter) {
     assertInitialized();
     configureByFiles(filesBefore);
     complete(CompletionType.BASIC);
@@ -751,18 +816,18 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
   }
 
   @Override
-  public void testCompletionVariants(@NotNull final String fileBefore, final String @NotNull ... expectedItems) {
+  public void testCompletionVariants(@NotNull String fileBefore, String @NotNull ... expectedItems) {
     assertInitialized();
-    final List<String> result = getCompletionVariants(fileBefore);
+    List<String> result = getCompletionVariants(fileBefore);
     assertNotNull(result);
     UsefulTestCase.assertSameElements(result, expectedItems);
   }
 
   @Override
-  public List<String> getCompletionVariants(final String @NotNull ... filesBefore) {
+  public List<String> getCompletionVariants(String @NotNull ... filesBefore) {
     assertInitialized();
     configureByFiles(filesBefore);
-    final LookupElement[] items = complete(CompletionType.BASIC);
+    LookupElement[] items = complete(CompletionType.BASIC);
     assertNotNull("No lookup was shown, probably there was only one lookup element that was inserted automatically", items);
     return getLookupElementStrings();
   }
@@ -775,12 +840,12 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
   }
 
   @Override
-  public void finishLookup(final char completionChar) {
+  public void finishLookup(char completionChar) {
     myEditorTestFixture.finishLookup(completionChar);
   }
 
   @Override
-  public void testRename(@NotNull final String fileBefore,
+  public void testRename(@NotNull String fileBefore,
                          @NotNull String fileAfter,
                          @NotNull String newName,
                          @TestDataFile String @NotNull ... additionalFiles) {
@@ -800,13 +865,13 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
   }
 
   @Override
-  public void testRenameUsingHandler(@NotNull final String fileAfter, @NotNull final String newName) {
+  public void testRenameUsingHandler(@NotNull String fileAfter, @NotNull String newName) {
     renameElementAtCaretUsingHandler(newName);
     checkResultByFile(fileAfter);
   }
 
   @Override
-  public void testRename(@NotNull final String fileAfter, @NotNull final String newName) {
+  public void testRename(@NotNull String fileAfter, @NotNull String newName) {
     renameElementAtCaret(newName);
     checkResultByFile(fileAfter);
   }
@@ -819,35 +884,35 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
   }
 
   @Override
-  public void renameElementAtCaret(@NotNull final String newName) {
+  public void renameElementAtCaret(@NotNull String newName) {
     renameElement(getElementAtCaret(), newName);
   }
 
   @Override
-  public void renameElementAtCaretUsingHandler(@NotNull final String newName) {
-    final DataContext editorContext = ((EditorEx)myEditor).getDataContext();
-    final DataContext context = dataId -> PsiElementRenameHandler.DEFAULT_NAME.is(dataId)
+  public void renameElementAtCaretUsingHandler(@NotNull String newName) {
+    DataContext editorContext = ((EditorEx)myEditor).getDataContext();
+    DataContext context = dataId -> PsiElementRenameHandler.DEFAULT_NAME.is(dataId)
            ? newName
            : editorContext.getData(dataId);
-    final RenameHandler renameHandler = RenameHandlerRegistry.getInstance().getRenameHandler(context);
+    RenameHandler renameHandler = RenameHandlerRegistry.getInstance().getRenameHandler(context);
     assertNotNull("No handler for this context", renameHandler);
 
     renameHandler.invoke(getProject(), myEditor, getFile(), context);
   }
 
   @Override
-  public void renameElement(@NotNull final PsiElement element, @NotNull final String newName) {
+  public void renameElement(@NotNull PsiElement element, @NotNull String newName) {
     final boolean searchInComments = false;
     final boolean searchTextOccurrences = false;
     renameElement(element, newName, searchInComments, searchTextOccurrences);
   }
 
   @Override
-  public void renameElement(@NotNull final PsiElement element,
-                            @NotNull final String newName,
-                            final boolean searchInComments,
-                            final boolean searchTextOccurrences) {
-    final PsiElement substitution = RenamePsiElementProcessor.forElement(element).substituteElementToRename(element, myEditor);
+  public void renameElement(@NotNull PsiElement element,
+                            @NotNull String newName,
+                            boolean searchInComments,
+                            boolean searchTextOccurrences) {
+    PsiElement substitution = RenamePsiElementProcessor.forElement(element).substituteElementToRename(element, myEditor);
     if (substitution == null) return;
     new RenameProcessor(getProject(), substitution, newName, searchInComments, searchTextOccurrences).run();
   }
@@ -863,7 +928,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
   }
 
   @Override
-  public void type(final char c) {
+  public void type(char c) {
     assertInitialized();
     myEditorTestFixture.type(c);
   }
@@ -874,7 +939,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
   }
 
   @Override
-  public void performEditorAction(@NotNull final String actionId) {
+  public void performEditorAction(@NotNull String actionId) {
     assertInitialized();
     EdtTestUtil.runInEdtAndWait(() -> myEditorTestFixture.performEditorAction(actionId));
   }
@@ -891,7 +956,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
 
   @NotNull
   @Override
-  public Collection<UsageInfo> testFindUsages(final String @NotNull ... fileNames) {
+  public Collection<UsageInfo> testFindUsages(String @NotNull ... fileNames) {
     assertInitialized();
     if (fileNames.length > 0) {
       configureByFiles(fileNames);
@@ -935,13 +1000,13 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
 
   @NotNull
   @Override
-  public Collection<UsageInfo> findUsages(@NotNull final PsiElement targetElement) {
+  public Collection<UsageInfo> findUsages(@NotNull PsiElement targetElement) {
     return findUsages(targetElement, null);
   }
 
   @NotNull
   @Override
-  public String getUsageViewTreeTextRepresentation(@NotNull final Collection<? extends UsageInfo> usages) {
+  public String getUsageViewTreeTextRepresentation(@NotNull Collection<? extends UsageInfo> usages) {
     UsageViewImpl usageView = (UsageViewImpl)UsageViewManager
       .getInstance(getProject()).createUsageView(UsageTarget.EMPTY_ARRAY,
                                                  ContainerUtil.map(usages, usage -> new UsageInfo2UsageAdapter(usage)).toArray(Usage.EMPTY_ARRAY),
@@ -951,9 +1016,9 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
   }
 
   @Override
-  public @NotNull String getUsageViewTreeTextRepresentation(final @NotNull List<UsageTarget> usageTargets,
-                                                            final @NotNull Collection<? extends Usage> usages) {
-    final UsageViewImpl usageView = (UsageViewImpl)UsageViewManager.getInstance(getProject())
+  public @NotNull String getUsageViewTreeTextRepresentation(@NotNull List<UsageTarget> usageTargets,
+                                                            @NotNull Collection<? extends Usage> usages) {
+    UsageViewImpl usageView = (UsageViewImpl)UsageViewManager.getInstance(getProject())
       .createUsageView(usageTargets.toArray(UsageTarget.EMPTY_ARRAY), usages.toArray(Usage.EMPTY_ARRAY), new UsageViewPresentation(), null);
 
     return getUsageViewTreeTextRepresentation(usageView);
@@ -961,11 +1026,11 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
 
   @NotNull
   @Override
-  public String getUsageViewTreeTextRepresentation(@NotNull final PsiElement targetElement) {
-    final FindUsagesManager usagesManager = ((FindManagerImpl)FindManager.getInstance(getProject())).getFindUsagesManager();
-    final FindUsagesHandler handler = usagesManager.getFindUsagesHandler(targetElement, false);
+  public String getUsageViewTreeTextRepresentation(@NotNull PsiElement targetElement) {
+    FindUsagesManager usagesManager = ((FindManagerImpl)FindManager.getInstance(getProject())).getFindUsagesManager();
+    FindUsagesHandler handler = usagesManager.getFindUsagesHandler(targetElement, false);
     assertNotNull("Cannot find handler for: " + targetElement, handler);
-    final UsageViewImpl usageView = (UsageViewImpl)usagesManager.doFindUsages(handler.getPrimaryElements(),
+    UsageViewImpl usageView = (UsageViewImpl)usagesManager.doFindUsages(handler.getPrimaryElements(),
                                                                               handler.getSecondaryElements(),
                                                                               handler,
                                                                               handler.getFindUsagesOptions(),
@@ -975,32 +1040,28 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
   }
 
   @Override
-  public @NotNull String getUsageViewTreeTextRepresentation(final @NotNull SearchTarget target) {
-    final Project project = getProject();
+  public @NotNull String getUsageViewTreeTextRepresentation(@NotNull SearchTarget target) {
+    Project project = getProject();
 
-    //noinspection unchecked
-    final UsageHandler<Object> handler = (UsageHandler<Object>)target.getUsageHandler();
-    final SearchScope searchScope = coalesce(target.getMaximalSearchScope(), GlobalSearchScope.allScope(project));
-    final AllSearchOptions<Object> allOptions =
-      new AllSearchOptions<>(UsageOptions.createOptions(searchScope), true, handler.getCustomOptions(FIND_USAGES));
-
-    final List<UsageTarget> usageTargets = List.of(new SearchTarget2UsageTarget<>(project, target, allOptions));
-    final Collection<? extends Usage> usages = buildUsageViewQuery(getProject(), target, handler, allOptions).findAll();
+    SearchScope searchScope = coalesce(target.getMaximalSearchScope(), GlobalSearchScope.allScope(project));
+    AllSearchOptions allOptions = new AllSearchOptions(UsageOptions.createOptions(searchScope), true);
+    List<UsageTarget> usageTargets = List.of(new SearchTarget2UsageTarget(project, target, allOptions));
+    Collection<? extends Usage> usages = buildUsageViewQuery(getProject(), target, allOptions).findAll();
 
     return getUsageViewTreeTextRepresentation(usageTargets, usages);
   }
 
   @NotNull
-  public Collection<UsageInfo> findUsages(@NotNull final PsiElement targetElement, @Nullable SearchScope scope) {
-    final Project project = getProject();
-    final FindUsagesHandler handler =
+  public Collection<UsageInfo> findUsages(@NotNull PsiElement targetElement, @Nullable SearchScope scope) {
+    Project project = getProject();
+    FindUsagesHandler handler =
       ((FindManagerImpl)FindManager.getInstance(project)).getFindUsagesManager().getFindUsagesHandler(targetElement, false);
 
-    final CommonProcessors.CollectProcessor<UsageInfo> processor =
+    CommonProcessors.CollectProcessor<UsageInfo> processor =
       new CommonProcessors.CollectProcessor<>(Collections.synchronizedList(new ArrayList<>()));
     assertNotNull("Cannot find handler for: " + targetElement, handler);
-    final PsiElement[] psiElements = ArrayUtil.mergeArrays(handler.getPrimaryElements(), handler.getSecondaryElements());
-    final FindUsagesOptions options = handler.getFindUsagesOptions(null);
+    PsiElement[] psiElements = ArrayUtil.mergeArrays(handler.getPrimaryElements(), handler.getSecondaryElements());
+    FindUsagesOptions options = handler.getFindUsagesOptions(null);
     if (scope != null) options.searchScope = scope;
     for (PsiElement psiElement : psiElements) {
       handler.processElementUsages(psiElement, processor, options);
@@ -1009,31 +1070,28 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
   }
 
   @Override
-  public RangeHighlighter @NotNull [] testHighlightUsages(final String @NotNull ... files) {
+  public RangeHighlighter @NotNull [] testHighlightUsages(String @NotNull ... files) {
     configureByFiles(files);
     testAction(new HighlightUsagesAction());
-    final Editor editor = getEditor();
-    //final Editor editor = com.intellij.openapi.actionSystem.CommonDataKeys.EDITOR.getData(DataManager.getInstance().getDataContext());
-    //assert editor != null;
-    //HighlightUsagesHandler.invoke(getProject(), editor, getFile());
+    Editor editor = getEditor();
     return editor.getMarkupModel().getAllHighlighters();
   }
 
   @Override
-  public void moveFile(@NotNull final String filePath, @NotNull final String to, @TestDataFile final String @NotNull ... additionalFiles) {
+  public void moveFile(@NotNull String filePath, @NotNull String to, @TestDataFile String @NotNull ... additionalFiles) {
     assertInitialized();
-    final Project project = getProject();
+    Project project = getProject();
     configureByFiles(ArrayUtil.reverseArray(ArrayUtil.append(additionalFiles, filePath)));
-    final VirtualFile file = findFileInTempDir(to);
+    VirtualFile file = findFileInTempDir(to);
     assertNotNull("Directory " + to + " not found", file);
     assertTrue(to + " is not a directory", file.isDirectory());
-    final PsiDirectory directory = myPsiManager.findDirectory(file);
+    PsiDirectory directory = myPsiManager.findDirectory(file);
     new MoveFilesOrDirectoriesProcessor(project, new PsiElement[]{getFile()}, directory, false, false, null, null).run();
   }
 
   @Override
   @Nullable
-  public GutterMark findGutter(@NotNull final String filePath) {
+  public GutterMark findGutter(@NotNull String filePath) {
     configureByFilesInner(filePath);
     CommonProcessors.FindFirstProcessor<GutterMark> processor = new CommonProcessors.FindFirstProcessor<>();
     doHighlighting();
@@ -1067,7 +1125,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
 
   @Override
   @NotNull
-  public List<GutterMark> findAllGutters(@NotNull final String filePath) {
+  public List<GutterMark> findAllGutters(@NotNull String filePath) {
     configureByFilesInner(filePath);
     return findAllGutters();
   }
@@ -1075,8 +1133,8 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
   @Override
   @NotNull
   public List<GutterMark> findAllGutters() {
-    final Project project = getProject();
-    final SortedMap<Integer, List<GutterMark>> result = new TreeMap<>();
+    Project project = getProject();
+    SortedMap<Integer, List<GutterMark>> result = new TreeMap<>();
 
     List<HighlightInfo> infos = doHighlighting();
     for (HighlightInfo info : infos) {
@@ -1084,7 +1142,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
     }
 
     RangeHighlighter[] highlighters = DocumentMarkupModel.forDocument(myEditor.getDocument(), project, true).getAllHighlighters();
-    for (final RangeHighlighter highlighter : highlighters) {
+    for (RangeHighlighter highlighter : highlighters) {
       if (!highlighter.isValid()) continue;
       addGutterIconRenderer(highlighter.getGutterIconRenderer(), highlighter.getStartOffset(), result);
     }
@@ -1092,12 +1150,12 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
   }
 
   @Override
-  public PsiFile addFileToProject(@NotNull final String relativePath, @NotNull final String fileText) {
+  public PsiFile addFileToProject(@NotNull String relativePath, @NotNull String fileText) {
     assertInitialized();
     return addFileToProject(getTempDirPath(), relativePath, fileText);
   }
 
-  protected PsiFile addFileToProject(@NotNull final String rootPath, @NotNull final String relativePath, @NotNull final String fileText) {
+  protected PsiFile addFileToProject(@NotNull String rootPath, @NotNull String relativePath, @NotNull String fileText) {
     try {
       VirtualFile file = WriteCommandAction.runWriteCommandAction(getProject(), (ThrowableComputable<VirtualFile, IOException>)() -> {
         try {
@@ -1148,7 +1206,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
   }
 
   @Override
-  public LookupElement[] complete(@NotNull final CompletionType type, final int invocationCount) {
+  public LookupElement[] complete(@NotNull CompletionType type, int invocationCount) {
     assertInitialized();
     return myEditorTestFixture.complete(type, invocationCount);
   }
@@ -1160,12 +1218,12 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
 
   @Override
   @NotNull
-  public final List<LookupElement> completeBasicAllCarets(@Nullable final Character charToTypeAfterCompletion) {
+  public final List<LookupElement> completeBasicAllCarets(@Nullable Character charToTypeAfterCompletion) {
     return myEditorTestFixture.completeBasicAllCarets(charToTypeAfterCompletion);
   }
 
   @Override
-  public void saveText(@NotNull final VirtualFile file, @NotNull final String text) {
+  public void saveText(@NotNull VirtualFile file, @NotNull String text) {
     try {
     WriteAction.runAndWait(() -> VfsUtil.saveText(file, text));
     }
@@ -1283,6 +1341,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
   public void tearDown() throws Exception {
     // don't use method references here to make stack trace reading easier
     //noinspection Convert2MethodRef
+    AtomicReference<ProjectRootManagerComponent> projectRootManagerComponentRef = new AtomicReference<>();
     runAll(
       () -> EdtTestUtil.runInEdtAndWait(() -> {
         if (ApplicationManager.getApplication() == null) {
@@ -1293,7 +1352,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
         try {
           project = myProjectFixture.getProject();
         }
-        catch (AssertionError ignore) {
+        catch (AssertionError | UninitializedPropertyAccessException ignore) {
           project = null;
         }
 
@@ -1318,6 +1377,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
           ((DaemonCodeAnalyzerImpl)DaemonCodeAnalyzer.getInstance(project)).cleanupAfterTest();
           // needed for myVirtualFilePointerTracker check below
           ((ProjectRootManagerImpl)ProjectRootManager.getInstance(project)).clearScopesCachesForModules();
+          projectRootManagerComponentRef.set(ObjectUtils.tryCast(ProjectRootManager.getInstance(project), ProjectRootManagerComponent.class));
         }
       }),
       () -> {
@@ -1329,6 +1389,15 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
       () -> EdtTestUtil.runInEdtAndWait(() -> myTempDirFixture.tearDown()),
       () -> super.tearDown(),
       () -> {
+        // Even ProjectRootManagerComponent is a project service implementing Disposable, it might be not disposed in test light projects.
+        // Virtual file pointers could be created too late - during `myProjectFixture.tearDown()` - on
+        // `fixture.getTestRootDisposable()` disposing or on project files cleanup.
+        // Need to dispose virtual file pointers after that moment.
+        // It wouldn't be needed if `ProjectRootManagerComponent.dispose()` would get called in tests, like in production.
+        ProjectRootManagerComponent projectRootManagerComponent = projectRootManagerComponentRef.getAndSet(null);
+        if (projectRootManagerComponent != null) {
+          projectRootManagerComponent.disposeVirtualFilePointersAfterTest();
+        }
         if (myVirtualFilePointerTracker != null) {
           myVirtualFilePointerTracker.assertPointersAreDisposed();
         }
@@ -1364,18 +1433,18 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
   }
 
   @Override
-  public PsiFile configureByFile(@NotNull final String file) {
+  public PsiFile configureByFile(@NotNull String file) {
     configureByFilesInner(file);
     return getFile();
   }
 
   @Override
-  public PsiFile @NotNull [] configureByFiles(final String @NotNull ... files) {
+  public PsiFile @NotNull [] configureByFiles(String @NotNull ... files) {
     return configureByFilesInner(files);
   }
 
   @Override
-  public PsiFile configureByText(@NotNull final FileType fileType, @NotNull final String text) {
+  public PsiFile configureByText(@NotNull FileType fileType, @NotNull String text) {
     assertInitialized();
     String extension = fileType.getDefaultExtension();
     associateExtensionTemporarily(fileType, extension, getTestRootDisposable());
@@ -1394,7 +1463,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
   }
 
   @Override
-  public PsiFile configureByText(@NotNull final String fileName, @NotNull final String text) {
+  public PsiFile configureByText(@NotNull String fileName, @NotNull String text) {
     assertInitialized();
     VirtualFile vFile = createFile(fileName, text);
     configureInner(vFile, SelectionAndCaretMarkupLoader.fromFile(vFile));
@@ -1406,9 +1475,9 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
     assertInitialized();
     try {
       return WriteCommandAction.writeCommandAction(getProject()).compute(() -> {
-        final VirtualFile file;
+        VirtualFile file;
         if (myTempDirFixture instanceof LightTempDirTestFixtureImpl) {
-          final VirtualFile root = LightPlatformTestCase.getSourceRoot();
+          VirtualFile root = LightPlatformTestCase.getSourceRoot();
           root.refresh(false, false);
           file = root.findOrCreateChildData(this, fileName);
           assertNotNull(fileName + " not found in " + root.getPath(), file);
@@ -1425,7 +1494,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
 
         prepareVirtualFile(file);
 
-        final Document document = FileDocumentManager.getInstance().getCachedDocument(file);
+        Document document = FileDocumentManager.getInstance().getCachedDocument(file);
         if (document != null) {
           PsiDocumentManager.getInstance(getProject()).doPostponedOperationsAndUnblockDocument(document);
           FileDocumentManager.getInstance().saveDocument(document);
@@ -1441,7 +1510,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
   }
 
   @Override
-  public Document getDocument(@NotNull final PsiFile file) {
+  public Document getDocument(@NotNull PsiFile file) {
     assertInitialized();
     return PsiDocumentManager.getInstance(getProject()).getDocument(file);
   }
@@ -1453,8 +1522,8 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
   }
 
   @Override
-  public PsiFile configureFromTempProjectFile(@NotNull final String filePath) {
-    final VirtualFile fileInTempDir = findFileInTempDir(filePath);
+  public PsiFile configureFromTempProjectFile(@NotNull String filePath) {
+    VirtualFile fileInTempDir = findFileInTempDir(filePath);
     if (fileInTempDir == null) {
       throw new IllegalArgumentException("Could not find file in temp dir: " + filePath);
     }
@@ -1470,7 +1539,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
     return configureInner(copy, SelectionAndCaretMarkupLoader.fromFile(copy));
   }
 
-  private PsiFile configureInner(@NotNull final VirtualFile copy, @NotNull final SelectionAndCaretMarkupLoader loader) {
+  private PsiFile configureInner(@NotNull VirtualFile copy, @NotNull SelectionAndCaretMarkupLoader loader) {
     assertInitialized();
 
     EdtTestUtilKt.runInEdtAndWait(() -> {
@@ -1523,13 +1592,13 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
   }
 
   @Override
-  public VirtualFile findFileInTempDir(@NotNull final String filePath) {
+  public VirtualFile findFileInTempDir(@NotNull String filePath) {
     if (myTempDirFixture instanceof LightTempDirTestFixtureImpl) {
       return myTempDirFixture.getFile(filePath);
     }
     String fullPath = getTempDirPath() + "/" + filePath;
 
-    final VirtualFile copy = LocalFileSystem.getInstance().refreshAndFindFileByPath(fullPath.replace(File.separatorChar, '/'));
+    VirtualFile copy = LocalFileSystem.getInstance().refreshAndFindFileByPath(fullPath.replace(File.separatorChar, '/'));
     assertNotNull("file " + fullPath + " not found", copy);
     VfsTestUtil.assertFilePathEndsWithCaseSensitivePath(copy, filePath);
     return copy;
@@ -1537,11 +1606,12 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
 
   @NotNull
   protected Editor createEditor(@NotNull VirtualFile file) {
-    final Project project = getProject();
-    final FileEditorManager instance = FileEditorManager.getInstance(project);
+    Project project = getProject();
+    FileEditorManager instance = FileEditorManager.getInstance(project);
     PsiDocumentManager.getInstance(getProject()).commitAllDocuments();
 
     Editor editor = instance.openTextEditor(new OpenFileDescriptor(project, file), false);
+    UIUtil.markAsFocused(editor.getContentComponent(), true); // to make UIUtil.hasFocus return true to make ShowAutoImportPass.showImports work
     EditorTestUtil.waitForLoading(editor);
     DaemonCodeAnalyzer.getInstance(getProject()).restart();
     return editor;
@@ -1570,7 +1640,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
   }
 
   public long collectAndCheckHighlighting(@NotNull ExpectedHighlightingData data) {
-    final Project project = getProject();
+    Project project = getProject();
     EdtTestUtil.runInEdtAndWait(() -> PsiDocumentManager.getInstance(project).commitAllDocuments());
 
     PsiFileImpl file = (PsiFileImpl)getHostFile();
@@ -1579,8 +1649,8 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
     // to load AST for changed files before it's prohibited by "fileTreeAccessFilter"
     ensureIndexesUpToDate(project);
 
-    final long start = System.currentTimeMillis();
-    final VirtualFileFilter fileTreeAccessFilter = myVirtualFileFilter;
+    long start = System.currentTimeMillis();
+    VirtualFileFilter fileTreeAccessFilter = myVirtualFileFilter;
     Disposable disposable = Disposer.newDisposable();
     if (fileTreeAccessFilter != null) {
       PsiManagerEx.getInstanceEx(project).setAssertOnFileLoadingFilter(fileTreeAccessFilter, disposable);
@@ -1596,7 +1666,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
       Disposer.dispose(disposable);
     }
     //    ProfilingUtil.captureCPUSnapshot("testing");
-    final long elapsed = System.currentTimeMillis() - start;
+    long elapsed = System.currentTimeMillis() - start;
 
     data.checkResult(file, infos, file.getText());
     if (data.hasLineMarkers()) {
@@ -1613,7 +1683,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
    * Other testing methods are not affected,
    * consider using {@link PsiManagerEx#setAssertOnFileLoadingFilter(VirtualFileFilter, Disposable)}.
    * <p>
-   * Files loaded with <b>configure*</b> methods (which are called e.g. from {@link #testHighlighting(String...)}) won't be checked
+   * Files loaded with <b>configure*</b> methods (which are called, e.g. from {@link #testHighlighting(String...)}) won't be checked
    * because their AST will be loaded before setting filter. Use {@link #copyFileToProject(String)} and similar methods.
    */
   public void setVirtualFileFilter(@Nullable VirtualFileFilter filter) {
@@ -1632,7 +1702,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
 
   @NotNull
   @Override
-  public List<HighlightInfo> doHighlighting(@NotNull final HighlightSeverity minimalSeverity) {
+  public List<HighlightInfo> doHighlighting(@NotNull HighlightSeverity minimalSeverity) {
     return ContainerUtil.filter(doHighlighting(), info -> info.getSeverity().compareTo(minimalSeverity) >= 0);
   }
 
@@ -1673,7 +1743,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
   }
 
   @Override
-  public void allowTreeAccessForFile(@NotNull final VirtualFile file) {
+  public void allowTreeAccessForFile(@NotNull VirtualFile file) {
     assert myVirtualFileFilter instanceof FileTreeAccessFilter : "configured filter does not support this method";
     ((FileTreeAccessFilter)myVirtualFileFilter).allowTreeAccessForFile(file);
   }
@@ -1748,7 +1818,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
 
   @NotNull
   private String stripTrailingSpaces(@NotNull String actualText) {
-    final Document document = EditorFactory.getInstance().createDocument(actualText);
+    Document document = EditorFactory.getInstance().createDocument(actualText);
     ((DocumentImpl)document).stripTrailingSpaces(getProject());
     actualText = document.getText();
     return actualText;
@@ -1760,7 +1830,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
 
   @NotNull
   public String getFoldingDescription(boolean withCollapseStatus) {
-    final Editor topEditor = getHostEditor();
+    Editor topEditor = getHostEditor();
     return EdtTestUtil.runInEdtAndGet(() -> {
       IdeaTestExecutionPolicy policy = IdeaTestExecutionPolicy.current();
       if (policy != null) {
@@ -1785,7 +1855,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
                                                                @NotNull Collection<? extends T> segments,
                                                                @NotNull String tagName,
                                                                @Nullable Function<? super T, String> attrCalculator) {
-    final List<Border> borders = new LinkedList<>();
+    List<Border> borders = new LinkedList<>();
     for (T region : segments) {
       String attr = attrCalculator == null ? null : attrCalculator.fun(region);
       borders.add(new CodeInsightTestFixtureImpl.Border(true, region.getStartOffset(), attr));
@@ -1816,7 +1886,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
                                   @Nullable String destinationFileName,
                                   boolean doCheckCollapseStatus) {
     String expectedContent;
-    final File verificationFile;
+    File verificationFile;
     try {
       verificationFile = new File(verificationFileName);
       expectedContent = FileUtil.loadFile(verificationFile);
@@ -1827,23 +1897,33 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
     assertNotNull(expectedContent);
 
     expectedContent = StringUtil.replace(expectedContent, "\r", "");
-    final String cleanContent = removeFoldingMarkers(expectedContent);
+    String cleanContent = removeFoldingMarkers(expectedContent);
     if (destinationFileName == null) {
-      final String fileName = PathUtil.getFileName(verificationFileName);
+      String fileName = PathUtil.getFileName(verificationFileName);
       configureByText(fileName, cleanContent);
     }
     else {
       try {
-        FileUtil.writeToFile(new File(destinationFileName), cleanContent);
-        VirtualFile file = LocalFileSystem.getInstance().refreshAndFindFileByPath(destinationFileName);
-        assertNotNull(file);
-        configureFromExistingVirtualFile(file);
+        @SuppressWarnings("ConstantConditions") String tempDirPrefix = myTempDirFixture.getFile("").getUrl();
+
+        // if destination (as a URL) points to a file inside the temp dir, then create it there
+        if (destinationFileName.startsWith(tempDirPrefix)) {
+          VirtualFile file = myTempDirFixture.createFile(destinationFileName.substring(tempDirPrefix.length()), cleanContent);
+          assertNotNull(file);
+          configureFromExistingVirtualFile(file);
+        }
+        else {
+          FileUtil.writeToFile(new File(destinationFileName), cleanContent);
+          VirtualFile file = LocalFileSystem.getInstance().refreshAndFindFileByPath(destinationFileName);
+          assertNotNull(file);
+          configureFromExistingVirtualFile(file);
+        }
       }
       catch (IOException e) {
         throw new RuntimeException(e);
       }
     }
-    final String actual = getFoldingDescription(doCheckCollapseStatus);
+    String actual = getFoldingDescription(doCheckCollapseStatus);
     if (!expectedContent.equals(actual)) {
       throw new FileComparisonFailure(verificationFile.getName(), expectedContent, actual, verificationFile.getPath());
     }
@@ -1856,24 +1936,24 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
   }
 
   @Override
-  public void testFoldingWithCollapseStatus(@NotNull final String verificationFileName) {
+  public void testFoldingWithCollapseStatus(@NotNull String verificationFileName) {
     testFoldingRegions(verificationFileName, null, true);
   }
 
   @Override
-  public void testFoldingWithCollapseStatus(@NotNull final String verificationFileName, @Nullable String destinationFileName) {
+  public void testFoldingWithCollapseStatus(@NotNull String verificationFileName, @Nullable String destinationFileName) {
     testFoldingRegions(verificationFileName, destinationFileName, true);
   }
 
   @Override
-  public void testFolding(@NotNull final String verificationFileName) {
+  public void testFolding(@NotNull String verificationFileName) {
     testFoldingRegions(verificationFileName, null, false);
   }
 
   @Override
   public void testRainbow(@NotNull String fileName, @NotNull String text, boolean isRainbowOn, boolean withColor) {
-    final EditorColorsScheme globalScheme = EditorColorsManager.getInstance().getGlobalScheme();
-    final boolean isRainbowOnInScheme = RainbowHighlighter.isRainbowEnabled(globalScheme, null);
+    EditorColorsScheme globalScheme = EditorColorsManager.getInstance().getGlobalScheme();
+    boolean isRainbowOnInScheme = RainbowHighlighter.isRainbowEnabled(globalScheme, null);
     try {
       RainbowHighlighter.setRainbowEnabled(globalScheme, null, isRainbowOn);
       configureByText(fileName, text.replaceAll("<" + RAINBOW + "(\\scolor='[^']*')?>", "").replace("</" + RAINBOW + ">", ""));
@@ -1931,7 +2011,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
   }
 
   @Override
-  public void assertPreferredCompletionItems(final int selected, final String @NotNull ... expected) {
+  public void assertPreferredCompletionItems(int selected, String @NotNull ... expected) {
     myEditorTestFixture.assertPreferredCompletionItems(selected, expected);
   }
 
@@ -1939,10 +2019,10 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
   public void testStructureView(@NotNull Consumer<? super StructureViewComponent> consumer) {
     assertNotNull("configure first", myFile);
 
-    final FileEditor fileEditor = FileEditorManager.getInstance(getProject()).getSelectedEditor(myFile);
+    FileEditor fileEditor = FileEditorManager.getInstance(getProject()).getSelectedEditor(myFile);
     assertNotNull("editor not opened for " + myFile, myFile);
 
-    final StructureViewBuilder builder = LanguageStructureViewBuilder.INSTANCE.getStructureViewBuilder(getFile());
+    StructureViewBuilder builder = LanguageStructureViewBuilder.INSTANCE.getStructureViewBuilder(getFile());
     assertNotNull("no builder for " + myFile, builder);
 
     StructureViewComponent component = null;
@@ -1974,8 +2054,18 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
   @NotNull
   @Override
   public List<Object> getGotoClassResults(@NotNull String pattern, boolean searchEverywhere, @Nullable PsiElement contextForSorting) {
-    SearchEverywhereContributor<Object> contributor = createMockContributor(searchEverywhere);
-    final ArrayList<Object> results = new ArrayList<>();
+    SearchEverywhereContributor<Object> contributor = createMockClassSearchEverywhereContributor(searchEverywhere);
+    ArrayList<Object> results = new ArrayList<>();
+    contributor.fetchElements(pattern, new MockProgressIndicator(), new CommonProcessors.CollectProcessor<>(results));
+    return results;
+  }
+
+  @Override
+  public @NotNull List<Object> getGotoSymbolResults(@NotNull String pattern,
+                                                    boolean searchEverywhere,
+                                                    @Nullable PsiElement contextForSorting) {
+    SearchEverywhereContributor<Object> contributor = createMockSymbolSearchEverywhereContributor(searchEverywhere);
+    ArrayList<Object> results = new ArrayList<>();
     contributor.fetchElements(pattern, new MockProgressIndicator(), new CommonProcessors.CollectProcessor<>(results));
     return results;
   }
@@ -1986,10 +2076,20 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
     return myEditorTestFixture.getBreadcrumbsAtCaret();
   }
 
-  private SearchEverywhereContributor<Object> createMockContributor(boolean everywhere) {
+  private SearchEverywhereContributor<Object> createMockClassSearchEverywhereContributor(boolean everywhere) {
     DataContext dataContext = SimpleDataContext.getProjectContext(getProject());
     AnActionEvent event = AnActionEvent.createFromDataContext(ActionPlaces.UNKNOWN, null, dataContext);
     ClassSearchEverywhereContributor contributor = new ClassSearchEverywhereContributor(event) {{
+      myScopeDescriptor = new ScopeDescriptor(FindSymbolParameters.searchScopeFor(myProject, everywhere));
+    }};
+    Disposer.register(getProjectDisposable(), contributor);
+    return contributor;
+  }
+
+  private SearchEverywhereContributor<Object> createMockSymbolSearchEverywhereContributor(boolean everywhere) {
+    DataContext dataContext = SimpleDataContext.getProjectContext(getProject());
+    AnActionEvent event = AnActionEvent.createFromDataContext(ActionPlaces.UNKNOWN, null, dataContext);
+    SymbolSearchEverywhereContributor contributor = new SymbolSearchEverywhereContributor(event) {{
       myScopeDescriptor = new ScopeDescriptor(FindSymbolParameters.searchScopeFor(myProject, everywhere));
     }};
     Disposer.register(getProjectDisposable(), contributor);
@@ -2004,7 +2104,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
     }
   }
 
-  public static boolean invokeIntention(@NotNull IntentionAction action, PsiFile file, Editor editor) {
+  public static boolean invokeIntention(@NotNull IntentionAction action, @NotNull PsiFile file, @NotNull Editor editor) {
     // Test that action will automatically clear the read-only attribute if modification is necessary.
     // If your test fails due to this, make sure that your quick-fix/intention
     // overrides "getElementToMakeWritable" or has the following line:
@@ -2054,12 +2154,13 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
     return writable;
   }
 
-  private static void checkPsiTextConsistency(Project project, VirtualFile vFile) {
+  private static void checkPsiTextConsistency(@NotNull Project project, @NotNull VirtualFile vFile) {
     PsiFile topLevelPsi = vFile.isValid() ? PsiManager.getInstance(project).findFile(vFile) : null;
     if (topLevelPsi != null) {
       if (Registry.is("ide.check.structural.psi.text.consistency.in.tests")) {
         PsiTestUtil.checkPsiStructureWithCommit(topLevelPsi, PsiTestUtil::checkPsiMatchesTextIgnoringNonCode);
-      } else {
+      }
+      else {
         PsiTestUtil.checkStubsMatchText(topLevelPsi);
       }
     }
@@ -2075,7 +2176,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
   }
 
   @NotNull
-  public String getUsageViewTreeTextRepresentation(@NotNull final UsageViewImpl usageView) {
+  public String getUsageViewTreeTextRepresentation(@NotNull UsageViewImpl usageView) {
     Disposer.register(getTestRootDisposable(), usageView);
     usageView.expandAll();
     return TreeNodeTester.forNode(usageView.getRoot()).withPresenter(usageView::getNodeText).constructTextRepresentation();
@@ -2090,7 +2191,7 @@ public class CodeInsightTestFixtureImpl extends BaseFixture implements CodeInsig
     private SelectionAndCaretMarkupLoader(@NotNull String fileText, String filePath) {
       this.fileText = fileText;
       this.filePath = filePath;
-      final Document document = EditorFactory.getInstance().createDocument(fileText);
+      Document document = EditorFactory.getInstance().createDocument(fileText);
       caretState = EditorTestUtil.extractCaretAndSelectionMarkers(document);
       newFileText = document.getText();
     }
