@@ -13,7 +13,7 @@ import com.intellij.util.PathsList;
 import com.intellij.util.messages.MessageBusConnection;
 import org.assertj.core.api.Assertions;
 import org.jetbrains.annotations.NotNull;
-import org.jetbrains.plugins.gradle.importing.GradleBuildScriptBuilder;
+import org.jetbrains.plugins.gradle.importing.TestGradleBuildScriptBuilder;
 import org.junit.Test;
 
 import java.io.IOException;
@@ -39,10 +39,10 @@ public class GradleDelegatedBuildTest extends GradleDelegatedBuildTestCase {
 
     createProjectSubFile("impl/src/main/resources/dir/file-impl.properties");
     createProjectSubFile("impl/src/test/resources/dir/file-impl-test.properties");
-    GradleBuildScriptBuilder builder = createBuildScriptBuilder();
+    TestGradleBuildScriptBuilder builder = createBuildScriptBuilder();
     importProject(
       builder
-        .allprojects(GradleBuildScriptBuilder::withJavaPlugin)
+        .allprojects(TestGradleBuildScriptBuilder::withJavaPlugin)
         .addImplementationDependency(builder.project(":api"))
         .project(":api", p -> {
           p.addImplementationDependency(p.project(":impl"));
@@ -106,13 +106,15 @@ public class GradleDelegatedBuildTest extends GradleDelegatedBuildTestCase {
     createProjectSubFile("src/another cool name/resources/dir/file-Spaces.properties");
 
     importProject(
-      "apply plugin: 'java'\n" +
-      "\n" +
-      "sourceSets {\n" +
-      "  'integration-test' {}\n" +
-      "  anotherSourceSet {}\n" +
-      "  'another cool name' {}\n" +
-      "}\n"
+      """
+        apply plugin: 'java'
+
+        sourceSets {
+          'integration-test' {}
+          anotherSourceSet {}
+          'another cool name' {}
+        }
+        """
     );
     assertModules("project", "project.main", "project.test",
                   "project.integration-test",
@@ -142,36 +144,38 @@ public class GradleDelegatedBuildTest extends GradleDelegatedBuildTestCase {
     }
 
     VirtualFile appFile = createProjectSubFile("src/main/java/my/pack/App.java",
-                                               "package my.pack;\n" +
-                                               "public class App {\n" +
-                                               "  public int method() { return 42; }" +
-                                               "}");
+                                               """
+                                                 package my.pack;
+                                                 public class App {
+                                                   public int method() { return 42; }}""");
     createProjectSubFile("src/test/java/my/pack/AppTest.java",
-                         "package my.pack;\n" +
-                         "public class AppTest {\n" +
-                         "  public void test() { new App().method(); }" +
-                         "}");
+                         """
+                           package my.pack;
+                           public class AppTest {
+                             public void test() { new App().method(); }}""");
 
     createProjectSubFile("api/src/main/java/my/pack/Api.java",
-                         "package my.pack;\n" +
-                         "public class Api {\n" +
-                         "  public int method() { return 42; }" +
-                         "}");
+                         """
+                           package my.pack;
+                           public class Api {
+                             public int method() { return 42; }}""");
     createProjectSubFile("api/src/test/java/my/pack/ApiTest.java",
                          "package my.pack;\n" +
                          "public class ApiTest {}");
 
     createProjectSubFile("impl/src/main/java/my/pack/Impl.java",
-                         "package my.pack;\n" +
-                         "import my.pack.Api;\n" +
-                         "public class Impl extends Api {}");
+                         """
+                           package my.pack;
+                           import my.pack.Api;
+                           public class Impl extends Api {}""");
     createProjectSubFile("impl/src/test/java/my/pack/ImplTest.java",
-                         "package my.pack;\n" +
-                         "import my.pack.ApiTest;\n" +
-                         "public class ImplTest extends ApiTest {}");
+                         """
+                           package my.pack;
+                           import my.pack.ApiTest;
+                           public class ImplTest extends ApiTest {}""");
 
     importProject(script(it -> {
-      it.allprojects(GradleBuildScriptBuilder::withJavaPlugin)
+      it.allprojects(TestGradleBuildScriptBuilder::withJavaPlugin)
         .addImplementationDependency(it.project(":impl"))
         .project(":impl", p -> {
           p.addImplementationDependency(p.project(":api"));
@@ -193,7 +197,7 @@ public class GradleDelegatedBuildTest extends GradleDelegatedBuildTestCase {
       @Override
       public void finished(@NotNull ProjectTaskManager.Result result) {
         result.getContext().getDirtyOutputPaths()
-          .ifPresent(paths -> dirtyOutputRoots.addAll(paths.map(PathUtil::toSystemIndependentName).collect(Collectors.toList())));
+          .ifPresent(paths -> dirtyOutputRoots.addAll(paths.map(PathUtil::toSystemIndependentName).toList()));
       }
     });
 
@@ -244,11 +248,10 @@ public class GradleDelegatedBuildTest extends GradleDelegatedBuildTestCase {
 
     //----check incremental make and build dependant module----//
     dirtyOutputRoots.clear();
-    setFileContent(appFile, "package my.pack;\n" +
-                            "public class App {\n" +
-                            "  public int method() { return 42; }" +
-                            "  public int methodX() { return 42; }" +
-                            "}", false);
+    setFileContent(appFile, """
+      package my.pack;
+      public class App {
+        public int method() { return 42; }  public int methodX() { return 42; }}""", false);
     compileModules("project.test");
 
     expected = newArrayList(path(langPart + "/main"),
@@ -286,10 +289,10 @@ public class GradleDelegatedBuildTest extends GradleDelegatedBuildTestCase {
 
     //----check reverted change -> related build result can be obtained by Gradle from cache ---//
     dirtyOutputRoots.clear();
-    setFileContent(appFile, "package my.pack;\n" +
-                            "public class App {\n" +
-                            "  public int method() { return 42; }" +
-                            "}", false);
+    setFileContent(appFile, """
+      package my.pack;
+      public class App {
+        public int method() { return 42; }}""", false);
     compileModules("project.test");
     assertUnorderedElementsAreEqual(dirtyOutputRoots, expected);
   }
